Update news posts and images

--- a/_posts/2024-08-17-post.md
+++ b/_posts/2024-08-17-post.md
@@ -3,10 +3,11 @@ title: Welcoming the fall semester!
 image:
 author: j-wang
 tags:
+last_modified_at: ""
 ---
 
 
 <!-- excerpt start -->
-We are excited to welcome Elizabeth Haas, MPH, first year Epidemiology PhD student, to the Butler Population Sciences Research Group! Welcome, Elizabeth! In addition, we have had many exciting developments in our lab. We are looking forward to a great academic year!
+We are excited to welcome Elizabeth Haas, MPH, first year Epidemiology PhD student, to the Butler Population Sciences Research Group! Welcome, Elizabeth!
 <!-- excerpt end -->
 
