Updated lab group end of year celebrations

--- a/_posts/2024-05-29-post.md
+++ b/_posts/2024-05-29-post.md
@@ -8,7 +8,7 @@ last_modified_at: ""
 
 
 <!-- excerpt start -->
-We have much to celebrate with the closing of the academic year! Congratulations to Rina Yarosh, PhD, on her dissertation defense and graduation, to Shaun Jones, MPH for finishing the first year of the PhD program, and to Jeanny Wang for passing the Methods Qualifying Exam!
+We have much to celebrate with the closing of the academic year! Congratulations to Rina Yarosh, PhD, on her dissertation defense and graduation, to Lubna Hossain for graduating and achieving her MPH, to Shaun Jones for finishing the first year of the PhD program, and to Jeanny Wang for passing the Methods Qualifying Exam!
 <!-- excerpt end -->
 Go team, and sending all the best for a great summer!
 {%
