update on photo links and new blog post updates

--- a/_posts/2024-05-29-post.md
+++ b/_posts/2024-05-29-post.md
@@ -1,6 +1,6 @@
 ---
 title: Celebrating the academic year!
-image: "/images/news_pics/2024_summerlunch.JPEG"
+image: "/images/news_pics/2024_summerlunch.png"
 author: j-wang
 tags:
 last_modified_at: ""
@@ -13,7 +13,7 @@ We have much to celebrate with the closing of the academic year! Congratulations
 Go team, and sending all the best for a great summer!
 {%
 include figure.html
-image="images/news_pics/2024_summerlunch.JPEG"
+image="images/news_pics/2024_summerlunch.png"
 caption="Dr. Butler and team celebrating the end of the academic year at the Carolina Inn"
 position="center"
 width="50%"
