Update blog posts

--- a/_posts/2023-10-04-post.md
+++ b/_posts/2023-10-04-post.md
@@ -1,15 +1,19 @@
 ---
-title: ButlerPopSci presents at AACR Health  Disparities Conference
+title: ButlerPopSci at the 16th American Association for Cancer Research Conference on The Science of Cancer Health Disparities in Racial/Ethnic Minorities and the Medically Underserved
 image:
-author: j-wang
+author:
 tags:
 last_modified_at: ""
 ---
 
 <!-- excerpt start -->
-This past week, Dr. Butler presented at the 16th American Association for Cancer Research (AACR) Conference on The Science of Cancer Health Disparities in Racial/Ethnic Minorities and the Medically Underserved at Orlando, Florida! The talk, titled "The impact of patient-provider communication on treatment and survival among prostate cancer patients: A study of racial and geographic disparities", was part of the session, "Precision Prevention: Prediction Models and Data Analytics to Make
+This past week, Dr. Butler and colleagues presented at the 16th American Association for Cancer Research (AACR) Conference on The Science of Cancer Health Disparities in Racial/Ethnic Minorities and the Medically Underserved at Orlando, Florida.
+
+ <!-- excerpt end -->
+
+The talk, titled "The impact of patient-provider communication on treatment and survival among prostate cancer patients: A study of racial and geographic disparities", was part of the session, "Precision Prevention: Prediction Models and Data Analytics to Make
 Interventions More Precise in Minoritized and Underserved Populations", chaired by Dr. Chanita Hughes-Halbert, and Dr. Katharine Price.
-<!-- excerpt end -->
+
 
 {%
 include figure.html
