--- a/_posts/2024-05-29-post.md
+++ b/_posts/2024-05-29-post.md
@@ -1,7 +1,7 @@
 ---
 title: Celebrating the academic year!
 image: "/images/news_pics/2024_summerlunch.png"
-author: j-wang
+author:
 tags:
 last_modified_at: ""
 ---
