--- a/_posts/2024-02-23-post.md
+++ b/_posts/2024-02-23-post.md
@@ -1,7 +1,7 @@
 ---
 title: Shaun Jones, MPH, presents at the 45th Minority Health Conference!
-image: "/images/news_pics/2024_MHCgraphic.png"
-author: j-wang
+image: "/images/news_pics/2024_MHC_SJ2.png"
+author:
 tags:
 last_modified_at: ""
 ---
@@ -9,9 +9,30 @@ last_modified_at: ""
 
 <!-- excerpt start -->
 Congratulations to Shaun R. Jones, MPH, for presenting his research this week at the [45th Minority Health Conference](https://minorityhealth.web.unc.edu/)!
+<!-- excerpt end -->
 
-The Minority Health Conference is the largest and longest-running student-led health conference in the country. This year's conference theme was 'The Building Blocks to Well-being: Connections Between Health and Stress', and Shaun presented his work on "Geographic and Socioeconomic Determinants of Prostate Cancer Incidence in the United States."
-At the conference, Shaun and his colleague Simon Wilson also moderated the conference's Keynote Speaker talk given by Dr. Chantel Martin.
+The Minority Health Conference is the largest and longest-running student-led health conference in the country.
+
+{%
+include figure.html
+image="/images/news_pics/2024_MHCgraphic.png"
+caption="45th Minority Health Conference"
+position="center"
+width="50%"
+ %}
+
+This year's conference theme was 'The Building Blocks to Well-being: Connections Between Health and Stress.'
+
+Shaun Jones, MPH presented his work, titled "Geographic and Socioeconomic Determinants of Prostate Cancer Incidence in the United States."
+
+{%
+include figure.html
+image="images/news_pics/2024_MHC_SJ2.jpeg"
+caption=""
+position="center"
+width="50%"
+ %}
+
+At the conference, Shaun and his colleague Simon Wilson also moderated the conference's Keynote Speaker talk given by Dr. Chantel Martin!
 
 Congratulations, Shaun and team!
-<!-- excerpt end -->
